--- a/deploy/systemd/knitter-monitor.service
+++ b/deploy/systemd/knitter-monitor.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=The Knitter Agent
+Description=The Knitter Monitor
 Documentation=https://github.com/ZTE/Knitter/tree/master/docs/
 
 [Service]
-ExecStart=/opt/knitter-agent/knitter-agent
+ExecStart=/opt/knitter-monitor/knitter-monitor
 Restart=always
 StartLimitInterval=0
 
